--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.160",
     "react": "^17.0.2",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.2",
     "react-router-dom": "^6.2.1",
-    "swiper": "^8.3.2"
+    "swiper": "^8.3.2",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
