--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "netlify": "^13.3.3",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.4.17",
     "vite": "^2.7.2"
