--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.2",
     "react-router-dom": "^6.2.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.3.2",
     "typewriter-effect": "^2.21.0"
   },
